<resources>
    <string name="app_name">Agora</string>
    <string name="user_name">User name *</string>
    <string name="password">Password *</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="connect_with_facebook">\t\tCONNECT WITH FACEBOOK\t\t</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name *</string>
    <string name="email">Email *</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="welcome_to_agora_vote">Welcome To Agora Vote!</string>
    <string name="create_election">Create Election</string>
    <string name="election_name">Election Name *</string>
    <string name="election_description">Election Description *</string>
    <string name="start_date">Start Date *</string>
    <string name="end_date">End Date *</string>
    <string name="candidate_name">Candidate Name *</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="candidates">Candidates</string>
    <string name="fill_the_form_to_add_more_candidates">Fill the form to add more candidates</string>
    <string name="select_voting_algorithm">Select voting algorithm</string>
    <string name="get_real_time_results">Get real time results?</string>
    <string name="invite_voters">Invite voters?</string>
    <string name="how_secrete_are_the_ballots">How secrete are the ballots?</string>
    <string name="who_can_see_the_list_of_voters">Who can see the list of voters?</string>
    <string name="completely_secrete">Ballots are completely secrete and never shown to any one</string>
    <string name="visible_only_to_me">Ballots are visible only to me</string>
    <string name="visible_to_everyone">Ballots are visible to everyone with access to the election</string>
    <string name="only_me">Only me</string>
    <string name="everyone_with_access">Everyone with access to the election</string>
    <string name="finish">Finish</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="first_name_no_star">First Name</string>
    <string name="last_name_no_star">Last Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="full_name">Full name:</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="dashboard">Dashboard</string>
    <string name="agora_description">Agora vote is a voting platform where users can create elections and invite friends to cast their votes.</string>
    <string name="what_agora_supports">It supports a wide range of voting algorithms some of which are Majority, Egalitarian, Australian STV just to name a few</string>
    <string name="learn_more">Learn More</string>
    <string name="elections">Elections:</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="active">Active</string>
    <string name="finished">Finished</string>
    <string name="election">Election:</string>
    <string name="description">Description</string>
    <string name="important">Important</string>
    <string name="start">Start:</string>
    <string name="status">Status:</string>
    <string name="finish_colon">Finish:</string>
    <string name="details">Details</string>
    <string name="basic">\tBasic\t</string>
    <string name="voters">\tVoters\t</string>
    <string name="ballots">\tBallots\t</string>
    <string name="results">\tResults\t</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
